Closed Bug 1133479 Opened 10 years ago Closed 10 years ago

Fix media/gmp-clearkey build on mingw.

Categories

(Core :: Audio/Video, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox37 --- fixed
firefox38 --- fixed

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(2 files)

Attached patch fixSplinter Review
I get following error: AnnexB.cpp:41:30: error: invalid initialization of non-const reference of type ‘__gnu_cxx::__normal_iterator<const unsigned char*, std::vector<unsigned char> >&’ from an rvalue of type ‘__gnu_cxx::__normal_iterator<const unsigned char*, std::vector<unsigned char> >’ Also, GCC doesn't support #pragma comment(lib,...), so we need an explicit mfuuid import in moz.build. I also fixed a few warnings about unused variables.
Attachment #8564976 - Flags: review?(cpearce)
Attachment #8564976 - Flags: review?(cpearce) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Attached patch Beta patchSplinter Review
Patch for beta branch as part of EME platform uplift.
Comment on attachment 8572377 [details] [diff] [review] Beta patch Requesting retroactive approval for Beta landing as part of EME platform uplift.
Attachment #8572377 - Flags: approval-mozilla-beta?
Comment on attachment 8572377 [details] [diff] [review] Beta patch Approved for Beta as part of EME platform uplift.
Attachment #8572377 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: