Bug 1133479 - Fixed media/gmp-clearkey build on mingw. r=cpearce