media/gmp-clearkey/0.1/WMFAACDecoder.cpp
@@ -262,10 +262,6 @@ WMFAACDecoder::CreateOutputSample(IMFSample** aOutSample)
   hr = MFCreateAlignedMemoryBuffer(bufferSize, alignment, &buffer);
   ENSURE(SUCCEEDED(hr), hr);
 
-  DWORD maxLength = 0;
-  DWORD currentLength = 0;
-  BYTE* dst = nullptr;
-
   hr = sample->AddBuffer(buffer);
   ENSURE(SUCCEEDED(hr), hr);
 
